--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 </p>
             </div>
             <div class="relative rounded-xl overflow-hidden shadow-2xl transform transition-all duration-500 hover:scale-105">
-                <img src="https://placehold.co/800x600/f3f4f6/334155?text=Our+Mission" alt="فريق عمل شركة الياسر" class="w-full h-auto">
+                <img src="https://placehold.co/800x600/f3f4f6/334155?text=Al+Yasser" alt="فريق عمل شركة الياسر" class="w-full h-auto">
                 <div class="absolute inset-0 bg-black bg-opacity-40 flex items-end p-6">
                     <p class="text-white text-xl font-bold">بناء الثقة من خلال الخبرة</p>
                 </div>
@@ -444,4 +444,5 @@
     </script>
 </body>
 </html>
+
 
